<resources>
    <string name="app_name">Jotunheimr</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="new_task_hint">Live in the name of the ghost #project $tag</string>
    <string name="projects">Projects</string>
    <string name="tags">Tags</string>
    <string name="tasks">Tasks</string>
    <string name="smoke_weed_everyday">smoke weed everyday</string>
    <string name="_420_blaze_it_nerds">420 blaze it, nerds!</string>
    <string name="null_or_blank">Task cannot be blank</string>
    <string name="plus_project">+ Project</string>
    <string name="plus_tag">+ Tag</string>
    <string name="color_preview">color preview</string>
    <string name="complete">Complete</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="all_tasks">All Tasks</string>
    <string name="cancel">Cancel</string>
    <string name="all_tags">All Tags</string>
    <string name="all_projects">All Projects</string>
    <string name="new_task">New Task</string>
    <string name="new_project">New Project</string>
    <string name="new_tag">New Tag</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="image_placeholder">image placeholder</string>
    <string name="sign_out">Sign Out</string>
    <string name="currently_signed_in_as">Currently signed in as:</string>
    <string name="no_one">no one</string>
</resources>
