<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_mode_edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:iconTint="@color/colorMenuTint"
        android:icon="@drawable/ic_mode_edit_black_24dp"/>

    <item android:id="@+id/action_mode_complete"
        android:title="@string/complete"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"
        android:iconTint="@color/colorMenuTint"
        android:icon="@drawable/ic_check_black_24dp"/>

    <item android:id="@+id/action_mode_delete"
        android:title="@string/delete"
        android:orderInCategory="300"
        android:iconTint="@color/colorMenuTint"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>