<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin_normal"
    android:paddingTop="@dimen/margin_normal"
    android:paddingRight="@dimen/margin_normal"
    android:paddingBottom="@dimen/margin_normal"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/tvLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currently_signed_in_as"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@id/tvLoginHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSignIn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginHeader" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        app:layout_constraintStart_toEndOf="@id/ivSignIn"
        app:layout_constraintTop_toBottomOf="@id/tvLoginHeader" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:onClick="signOut"
        android:text="@string/sign_out"
        app:layout_constraintStart_toStartOf="@id/sign_in_button"
        app:layout_constraintTop_toBottomOf="@id/sign_in_button" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="206dp" />
</androidx.constraintlayout.widget.ConstraintLayout>